--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -38,7 +38,9 @@
         </select>
         {{ end }}
       </div>
+      {{ if (isset site.Params "snipcart_api") }}
       <button class="cart snipcart-checkout"><i class="tf-ion-android-cart"></i><span class="badge badge-primary snipcart-items-count"></span></button>
+      {{ end }}
     </nav>
   </div>
 </header>
