A lot of changes on styling, this and some cleanup could lead to a total diff template

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,16 +2,22 @@
 
   {{- partial "banner.html" . }}
 
+  {{- partial "main.html" . }}
+
   {{- partial "features.html" . }}
 
-  {{- partial "promo.html" . }}
+  {{- partial "body.html" . }}
 
   {{- partial "about-product.html" . }}
+
+  {{- partial "promo.html" . }}
 
   {{- partial "products.html" . }}
 
   {{- partial "subscription.html" . }}
 
   {{- partial "testimonials.html" . }}
+
+  {{- partial "authors.html" . }}
 
 {{ end }}
