Added social network changes contact

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
 
   {{- partial "products.html" . }}
 
-  {{- partial "subscription.html" . }}
+  {{- partial "contact.html" . }}
 
   {{- partial "testimonials.html" . }}
 
