--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,6 +10,9 @@
               <a href="{{ .URL | absLangURL }}">{{ .Name }}</a>
             </li>
             {{ end }}
+            {{ range site.Params.social }}
+            <li class="list-inline-item"><a href="{{ .account }}" class="text-dark"><i class="{{ .icon }}"></i></a></li>
+            {{ end }}
           </ul>
           <p class="copyright-text">{{ site.Params.copyright | markdownify }}</p>
         </div>
