Edited some paddings

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -2,7 +2,7 @@
 
 {{- if $data.homepage.contact.enable }}
 {{- with $data.homepage.contact }}
-<section class="call-to-action section bg-opacity" id="contact" style="background-image: url('{{ .bg_image | absURL }}');">
+<section class="section bg-opacity" id="contact" style="background-image: url('{{ .bg_image | absURL }}');">
   <div class="row justify-content-center">
       <div class="col-lg-8">
         <h2 class="font-weight-bold mb-4">{{ .title | markdownify }}</h2>
