More feedback received. Added reviews and 2 new sections to book page. Fixed background at contact

--- a/layouts/books/single.html
+++ b/layouts/books/single.html
@@ -21,6 +21,8 @@
 	</div><!-- .container close -->
 </section><!-- header close -->
 
+{{- partial "sinopsis.html" . }}
+
 <section class="bg-orange section">
   <div class="container">
     <div class="row">
@@ -38,5 +40,7 @@
 </section>
 
 {{- partial "testimonials.html" . }}
+
+{{- partial "tech_specs.html" . }}
 
 {{ end }}
