--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -16,9 +16,9 @@
           <i class="tf-ion-quote"></i>
           <p>{{ .content | markdownify }}</p>
           <div class="author-details">
-            <img src="{{ .image | absURL }}" alt="{{ .name }}">
+<!--            <img src="{{ .image | absURL }}" alt="{{ .name }}">       -->
             <h4>{{ .name }}</h4>
-            <span>{{ .designation }}</span>
+<!--            <span>{{ .designation }}</span>          -->
           </div>
         </div>
       </div>
