--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -24,6 +24,23 @@
       </div>
       {{ end }}
     </div>
+    <div class="row justify-content-center">
+      <div class="col-12">
+      </div>
+        <div class="testimonial-sites">
+        </div>
+        {{ range .testimonial_site }}
+        <div class="col-lg-4 col-sm-6 mb-5 mb-lg-0 text-center">
+          <div class="testimonial-block">
+            <a href="{{ .link }}" class="mb-4 d-inline-block testimonial-site-link"><img src="{{ .logo | absURL }}" width="{{.logo_width}}"></a>
+            <div class="testimonial-site-text">
+              <h4>{{ .text }}</h4>
+            </div>
+          </div>
+        </div>
+        {{ end }}
+
+      </div>
     {{ end }}
   </div>
 </section>
